--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,13 @@ ktor = "3.3.3"
 hash = "0.8.0"
 media3 = "1.9.0"
 kmpalette = "3.1.0"
+material3Adaptive = "1.3.0-alpha03"
 
 [libraries]
 composeMultiplatform-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "composeMultiplatform" }
 composeMultiplatform-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "composeMultiplatform" }
 composeMultiplatform-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "composeMultiplatform" }
+composeMultiplatform-material3-adaptive-navigation3 = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation3", version.ref = "material3Adaptive" }
 composeMultiplatform-material3-windowSizeClass = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "composeMultiplatform" }
 composeMultiplatform-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "composeMultiplatform" }
 composeMultiplatform-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "composeMultiplatform" }
@@ -40,6 +42,8 @@ androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "medi
 kmpalette-core = { module = "com.kmpalette:kmpalette-core", version.ref = "kmpalette" }
 kmpalette-extensions-network = { module = "com.kmpalette:extensions-network", version.ref = "kmpalette" }
 materialKolor = { module = "com.materialkolor:material-kolor", version = "5.0.0-alpha04" }
+multiplatformSettings-noArg = { module = "com.russhwolf:multiplatform-settings-no-arg", version = "1.3.0" }
+multiplatformSettings-remember = { module = "dev.burnoo:compose-remember-setting", version = "1.0.3" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
