--- a/iosApp/control
+++ b/iosApp/control
@@ -1,6 +1,6 @@
 Package: paige.Navic
 Name: Navic
-Version: 1.0
+Version: 1.0.0-alpha01
 Architecture: iphoneos-arm64
 Maintainer: paige
 Author: paige
