--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
     name: Build Android APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       - name: Setup JDK
         uses: actions/setup-java@v5
@@ -26,13 +27,13 @@ jobs:
 
       - name: Build with Gradle
         env:
-          SIGNING_KEY_ALIAS: ${{ secrets.keyAlias }}
-          SIGNING_KEY_PASSWORD: ${{ secrets.keyPassword }}
-          SIGNING_STORE_PASSWORD: ${{ secrets.keystorePassword }}
+          SIGNING_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           SIGNING_STORE_FILE: ${{ github.workspace }}/release.keystore
           RELEASE: true
         run: |
-          echo "${{ secrets.keystore }}" | base64 -d > release.keystore
+          echo "${{ secrets.KEYSTORE }}" | base64 -d > release.keystore
           ./gradlew :composeApp:packageRelease --stacktrace
           rm release.keystore
 
