--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
-#Kotlin
-kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx3072M
-#Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+# Gradle
 org.gradle.configuration-cache=true
-org.gradle.caching=true
-#Android
-android.nonTransitiveRClass=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+
+# Kotlin
+kotlin.code.style=official
+kotlin.suppressGradlePluginWarnings=NonKmpAgpIsDeprecated
+
+# Android
 android.useAndroidX=true
+android.nonTransitiveRClass=true
+android.enableR8.fullMode=true
