--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,9 +92,7 @@ jobs:
             -archivePath "iosApp.xcarchive" \
             CODE_SIGN_ENTITLEMENTS="iosApp/entitlements.xml" \
             CODE_SIGN_IDENTITY="-" \
-            CODE_SIGN_STYLE=Manual \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
+            CODE_SIGN_STYLE=Manual
 
           mkdir -p Payload
 
