Update build.yml to include only APK files
Modified build script to only include APK files in the upload process. Added a TODO comment for future inclusion of IPA files.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,7 +132,7 @@ jobs:
 
           files=()
           i=1
-          for file in **/*.{apk,ipa}; do
+          for file in **/*.apk; do  # TODO: Add ipa - too big for Discord 10mb limit (need boooosts)
             files+=("-F file${i}=@${file}")
             ((i++))
           done
