--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ media3 = "1.9.1"
 kmpalette = "3.1.0"
 material3Adaptive = "1.3.0-alpha04"
 aboutLibraries = "13.2.1"
+composeUnstyled = "1.49.6"
 
 [libraries]
 composeMultiplatform-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "composeMultiplatform" }
